@@ -69,6 +69,9 @@ Bugs fixed
 * #1233: Allow finding both Python classes and exceptions with the "class" and
   "exc" roles in intersphinx.
 
+* #1198: Allow "image" for the "figwidth" option of the :rst:dir:`figure`
+  directive as documented by docutils.
+
 Documentation
 -------------
 
